--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NODE_ENV = development
 
 LOCALHOST = http://localhost:8080
 
-DEVELOPER_KEY = 1234
-DEVELOPER_SECRET = abcd
+DEVELOPER_KEY = 5066549580791808
+DEVELOPER_SECRET = DPc2phU3iz56z9zzcReZ9pGvI9ytpo3D
+
+USERNAME = Jane
+PASSCODE = 123456
