--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
-    "heartbank": "^0.2.1",
-    "multer": "^1.3.0"
+    "heartbank": "^0.2.2",
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   },
   "engine": "node 6.9.5"
 }
