--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "heartbankapp",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "HeartBank Demo App",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HeartBank/boilerplate.git"
+    "url": "git+https://github.com/HeartBank/demo.git"
   },
   "keywords": [
     "heartbank",
@@ -21,9 +21,9 @@
   "email": "thonly@heartbank.ceo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/HeartBank/boilerplate/issues"
+    "url": "https://github.com/HeartBank/demo/issues"
   },
-  "homepage": "https://github.com/HeartBank/boilerplate#readme",
+  "homepage": "https://github.com/HeartBank/demo#readme",
   "devDependencies": {
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
@@ -35,7 +35,7 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
-    "heartbank": "^0.2.6",
+    "heartbank": "^0.2.7",
     "multer": "^1.3.0",
     "path": "^0.12.7"
   },
